unpackaged/main/default/objects/Model_Decision__c/Model_Decision__c.object-meta.xml
<CustomObject>
    <label>Model Decision</label>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Model Decision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Model Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>