unpackaged/main/default/objects/Model_Decision__c/fields/Adverse_Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Reason__c</fullName>
    <label>Adverse Action Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>