unpackaged/main/default/objects/Model_Decision__c/fields/Boost_A__c.field-meta.xml
<CustomField>
    <fullName>Boost_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boost_A</label>
    <type>Checkbox</type>
</CustomField>