unpackaged/main/default/objects/Model_Decision__c/fields/delMar_V2_co_prob__c.field-meta.xml
<CustomField>
    <fullName>delMar_V2_co_prob__c</fullName>
    <label>delMar_V2_co_prob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>