unpackaged/main/default/objects/Model_Decision__c/fields/Impact_Factor__c.field-meta.xml
<CustomField>
    <fullName>Impact_Factor__c</fullName>
    <label>Impact Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>