unpackaged/main/default/objects/Model_Decision__c/fields/Max_Term__c.field-meta.xml
<CustomField>
    <fullName>Max_Term__c</fullName>
    <label>Max Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>