unpackaged/main/default/objects/Model_Decision__c/fields/Max_Term_Reason__c.field-meta.xml
<CustomField>
    <fullName>Max_Term_Reason__c</fullName>
    <label>Max Term Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>