unpackaged/main/default/objects/Model_Decision__c/fields/Model_Grade__c.field-meta.xml
<CustomField>
    <fullName>Model_Grade__c</fullName>
    <label>Model Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>