unpackaged/main/default/objects/Model_Decision__c/fields/Model_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Model_Recommendation__c</fullName>
    <label>Model Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>