unpackaged/main/default/objects/Model_Decision__c/fields/Renewal_Appr_score__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Appr_score__c</fullName>
    <label>Renewal_Appr_score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>