unpackaged/main/default/objects/Model_Decision__c/fields/Renewal_CO_prob__c.field-meta.xml
<CustomField>
    <fullName>Renewal_CO_prob__c</fullName>
    <label>Renewal_CO_prob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>