unpackaged/main/default/objects/Model_Decision__c/fields/Renewal_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Recommendation__c</fullName>
    <label>Renewal Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>