unpackaged/main/default/objects/Model_Decision__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>