unpackaged/main/default/objects/Model_Decision__c/fields/Term_12_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>Term_12_Approval_Amount__c</fullName>
    <label>Term 12 Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>