unpackaged/main/default/objects/Model_Decision__c/fields/WC_Credit_Decision__c.field-meta.xml
<CustomField>
    <fullName>WC_Credit_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WC Credit Decision</label>
    <referenceTo>WC_Credit_Decision__c</referenceTo>
    <relationshipLabel>Model Decisions</relationshipLabel>
    <relationshipName>Model_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>