unpackaged/main/default/objects/Model_Decision__c/fields/Weekly_Payments_Approved__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payments_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Payments Approved</label>
    <type>Checkbox</type>
</CustomField>